# SOP-process-detection-YOLO

./: .gitignore  README.md  SOP_PYD.py  SOP_PYD.spec  pyproject.toml  requirements-build.txt  requirements.txt  task_dispatcher.py
DEEPAIY/: DEEPLEARN_PYD.py  DEEPLEARN_PYD.spec  ModelSelection.py
SOPAIDC++/: .gitignore  README.md  SOPAID.sln  SOPAID.vcxproj  SOPAID.vcxproj.filters  SOPAIDExe.vcxproj  SOPAIDExe.vcxproj.filters  SopAidInfer.user.props.template
SOPAIDC++/app/: main.cpp
SOPAIDC++/include/: SopAidHandPose.h  SopAidInfer.h  cuda_runtime_api.h
SOPAIDC++/src/: IYoloBackend.h  OnnxYoloBackend.cpp  SopAidHandPose.cpp  SopAidInfer.cpp  TensorRtYoloBackend.cpp  YoloPostprocess.cpp  (+2 more)
SOPAID_wrapper/: .gitignore  AssemblyInfo.cpp  SOPAID_wrapper.cpp  SOPAID_wrapper.h  SOPAID_wrapper.vcxproj  SOPAID_wrapper.vcxproj.filters  pch.h
SOPAID_wrapper_test/: Program.cs  SOPAID_wrapper_test.csproj
config/: app_config.json  detect_full_smoke_60f.json  detect_yolo_only_smoke.json  train_request_ui_v1.json  train_request_with_export.json
cpp_sopaid_dll/: README.md  SopAidInfer.sln  SopAidInfer.user.props.template  SopAidInfer.vcxproj
deploy/: export_onnx.py  export_tensorrt.py  export_torchscript.py
docs/: CPP_THREE_FORMATS.md  DEPLOY_PLAN.md  PYTHON_TCP_API.md  TENSORRT_DEPLOY.md
scripts/: __init__.py  build_exe.ps1  check_env.py  config.py  detector.py  hand_pose.py  main_video.py  preprocess.py  runtime_logging.py  setup_env.ps1  sop_logic.py  utils.py  visualizer.py
tools/: __init__.py  extract_frames.py  prepare_dataset.py  select_roi.py  training.py
(+17 files in other folders)
